funcionamiento de devolucion